# Source-Code_ShaderX_GPU-Pro_GPU-Zen

./: LICENSE  README.md
GPU Pro1/: README.md
GPU Pro1/03_Rendering Techniques/04_VirtualTextureMapping101/Virtual_Texture_Mapping_Sample/: Readme.html  Readme.txt
GPU Pro1/03_Rendering Techniques/04_VirtualTextureMapping101/Virtual_Texture_Mapping_Sample_Binaries/: Readme.html  Readme.txt
GPU Pro1/03_Rendering Techniques/05_VolumeDecals/VolumeDecals/: readme.txt
GPU Pro1/03_Rendering Techniques/05_VolumeDecals/VolumeDecalsPics/: VolumeDecals1.tif
GPU Pro1/07_Shadows/03_Shadow Mapping for Omni-Directional Light Using Tetrahedron Mapping/TetrahedronShadowMap/: Obj.cpp  Obj.h  PointLight.cpp  PointLight.h  Sphere.cpp  Sphere.h  TetrahedronShadowMap.cpp  TetrahedronShadowMap.exezip  TetrahedronShadowMap.fx  TetrahedronShadowMap.manifest  TetrahedronShadowMap.rc  TetrahedronShadowMap_2005.sln  TetrahedronShadowMap_2005.vcproj  TetrahedronShadowMap_2008.sln  TetrahedronShadowMap_2008.vcproj
GPU Pro1/08_3D Engine Design/03_Porting code between Direct3D9 and OpenGL 2.0/Demo/: Demo.sln  Demo.vcproj  log_BlossomEngine_D3D9.txt  log_BlossomEngine_OGL.txt  main.cpp
GPU Pro2/: README.md
GPU Pro2/05_Handheld Devices/SDK_OGLES2_IPHONE_2.06.26.0716/Builds/: sdkver.h
GPU Pro2/05_Handheld Devices/SDK_OGLES2_IPHONE_2.06.26.0716/Tools/: PVRTGlobal.h  PVRTPFXParser.h  PVRTPrint3D.cpp  PVRTShadowVol.cpp  PVRTVector.h  PVRTVertex.cpp  PVRTVertex.h  PVRTools.h
GPU Pro2/05_Handheld Devices/SDK_OGLES2_WINDOWS_PCEMULATION_2.06.26.0716/Shell/: PVRShell.cpp  PVRShell.h  PVRShellImpl.h
GPU Pro2/05_Handheld Devices/SDK_OGLES2_WINDOWS_PCEMULATION_2.06.26.0716/Tools/: PVRTModelPOD.cpp  PVRTPFXParser.cpp  PVRTPrint3D.h  PVRTPrint3Ddat.h  PVRTString.cpp  PVRTTriStrip.cpp
GPU Pro3/: README.md
GPU Pro4/: README.md
GPU Pro4/02_Rendering/04_Tiled Forward Shading/tiled_forward_shading_demo/: Config.h  CudaGlobals.h  CudaRenderer.cu  CudaRenderer.h  DemoTypes.h  LightGrid.cpp  LightGrid.h  OBJModel.cpp  (+11 more)
GPU Pro4/03_Image Space/05_Coherence-Enhancing Filtering on the GPU/cefabs-v0.2-4-gcfa9b53-src/: CMakeLists.txt  README.txt  build.bat  build.sh  version.h.in
GPU Pro4/03_Image Space/05_Coherence-Enhancing Filtering on the GPU/cefabs-v0.2-4-gcfa9b53-src/cmake/: FindLibav.cmake  SetupCPack.cmake  SetupCUDA.cmake  Utils.cmake
GPU Pro4/03_Image Space/05_Coherence-Enhancing Filtering on the GPU/cefabs-v0.2-4-gcfa9b53-src/gpu/: CMakeLists.txt  basic_image.h  cpu_image.h  cpu_sampler.h  gpu_cache.cpp  gpu_cache.h  gpu_color.cu  gpu_color.h  gpu_convert.cu  gpu_convert.h  gpu_error.cpp  gpu_error.h  gpu_gauss.cu  gpu_gauss.h  gpu_image.cu  gpu_image.h  gpu_ivacef.cu  gpu_ivacef.h  gpu_math.h  gpu_plm2.h  gpu_st.h  gpu_stgauss3.cpp  gpu_stgauss3.cu  gpu_stgauss3.h  gpu_util.cu  gpu_util.h
GPU Pro4/03_Image Space/05_Coherence-Enhancing Filtering on the GPU/cefabs-v0.2-4-gcfa9b53-src/src/: CMakeLists.txt  cefabs.icns  cefabs.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  stable.h
GPU Pro4/03_Image Space/05_Coherence-Enhancing Filtering on the GPU/cefabs-v0.2-4-gcfa9b53-src/util/: CMakeLists.txt  cudadevicedialog.cpp  cudadevicedialog.h  cudadevicedialog.ui  fancystyle.cpp  fancystyle.h  imageutil.cpp  imageutil.h  imageview.cpp  imageview.h  libav_decoder.cpp  libav_decoder.h  libav_encoder.cpp  libav_encoder.h  logwindow.cpp  logwindow.h  param.cpp  param.h  paramui.cpp  paramui.h  rolloutbox.cpp  rolloutbox.h  settingscheck.cpp  settingscheck.h  stable.h  videocontrols.cpp  videocontrols.h  videoplayer.cpp  videoplayer.h
GPU Pro5/: README.md
GPU Pro6/: README.md
GPU Pro7/: README.md  ReadMe.md
GPU Zen1/: README.md
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README.md
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/: CMakeLists.txt
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/attributedvertexclouds-arcs/: Arc.cpp  Arc.h  ArcImplementation.cpp  ArcImplementation.h  ArcRendering.cpp  ArcRendering.h  ArcVertexCloud.cpp  ArcVertexCloud.h  CMakeLists.txt  main.cpp
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/attributedvertexclouds-blockworld/: Block.cpp  Block.h  BlockWorldImplementation.cpp  BlockWorldImplementation.h  BlockWorldInstancing.cpp  BlockWorldInstancing.h  BlockWorldRendering.cpp  BlockWorldRendering.h  BlockWorldTriangleStrip.cpp  BlockWorldTriangleStrip.h  BlockWorldTriangles.cpp  BlockWorldTriangles.h  BlockWorldVertexCloud.cpp  BlockWorldVertexCloud.h  CMakeLists.txt  main.cpp
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/attributedvertexclouds-cuboids/: CMakeLists.txt  Cuboid.cpp  Cuboid.h  CuboidImplementation.cpp  CuboidImplementation.h  CuboidInstancing.cpp  CuboidInstancing.h  CuboidRendering.cpp  CuboidRendering.h  CuboidTriangleStrip.cpp  CuboidTriangleStrip.h  CuboidTriangles.cpp  CuboidTriangles.h  CuboidVertexCloud.cpp  CuboidVertexCloud.h  main.cpp
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/attributedvertexclouds-polygons/: CMakeLists.txt  Polygon.cpp  Polygon.h  PolygonImplementation.cpp  PolygonImplementation.h  PolygonRendering.cpp  PolygonRendering.h  PolygonTriangleStrip.cpp  PolygonTriangleStrip.h  PolygonTriangles.cpp  PolygonTriangles.h  PolygonVertexCloud.cpp  PolygonVertexCloud.h  main.cpp
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/attributedvertexclouds-trajectories/: CMakeLists.txt  TrajectoryNode.cpp  TrajectoryNode.h  TrajectoryRendering.cpp  TrajectoryRendering.h  TrajectoryVertexCloud.cpp  TrajectoryVertexCloud.h  main.cpp
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/common/: CMakeLists.txt  Implementation.cpp  Implementation.h  Postprocessing.cpp  Postprocessing.h  Rendering.cpp  Rendering.h  Screenshot.cpp  Screenshot.h  common.cpp  common.h
GPU Zen1/01_Geometry Manipulation/01_Attributed Vertex Clouds/source/noise-generator/: CMakeLists.txt  main.cpp
GPU Zen2/: README.md
(+1300 files in other folders)
